# ptrace-iterator

./: Cargo.toml  README.md
ptrace-iterator/: Cargo.toml
ptrace-iterator-attr-macro/: Cargo.toml
ptrace-iterator-attr-macro/src/: derive.rs  lib.rs  state.rs
ptrace-iterator-attr-macro/src/snapshots/: ptrace_iterator_attr_macro__derive__tests__invalid_ptr_attrs-6.snap  ptrace_iterator_derive__derive__tests__invalid_ptr_attrs-3.snap
ptrace-iterator-core/: Cargo.toml
ptrace-iterator-core/src/: io.rs  lib.rs
ptrace-iterator/src/: command.rs  error.rs  event.rs  lib.rs  pending.rs  pid.rs
ptrace-iterator/src/syscall/: mod.rs  raw.rs
ptrace-iterator/tests/: read_file.rs
ptrace-iterator/tests/read_file/: Cargo.toml
ptrace-iterator/tests/read_file/src/: main.rs
