[workspace]
resolver = "3"
members = [
    "ptrace-iterator",
    "ptrace-iterator-attr-macro",
    "ptrace-iterator-core",
]
exclude = ["ptrace-iterator/tests/*"]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
repository = "https://github.com/LawnGnome/ptrace-iterator"
rust-version = "1.91"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
darling = "0.21.3"
escargot = "0.5.15"
insta = "1.43.2"
itertools = "0.14.0"
linux-aio-sys = "0.1.0"
linux-raw-sys = "0.12.0"
nix = "0.30.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.103"
ptrace-iterator = { version = "0.1.0", path = "ptrace-iterator" }
ptrace-iterator-attr-macro = { version = "0.1.0", path = "ptrace-iterator-attr-macro" }
ptrace-iterator-core = { version = "0.1.0", path = "ptrace-iterator-core" }
quote = "1.0.42"
syn = "2.0.110"
syscalls = "0.7.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.41"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
